--- a/templates/index.html
+++ b/templates/index.html
@@ -358,11 +358,10 @@
                     <li class="list-inline-item c-trade-sort__item">
                         <input class="c-trade-sort__item-field" id="range3" type="radio" name="range" value="">
                         <label class="c-trade-sort__item-name" for="range3"
-                            style="border-radius: 0px;width: 400px;text-align: left;padding-left: 5px;">
+                            style="border-radius: 0;width: 400px;text-align: left;padding-left: 5px;">
                         <img src="/static/asserts/images/header-banner/gg.png" width="20px"
                              style="margin-top: -5px;margin-right: 5px;"/>
                         <a target="_blank" href="#" style="margin-top: -5px;color: #777777;"/>
-
                         警惕骗子：有人冒充BD之家官方人员进行诈骗！ </a>
                     </label></li>
                 </ul>
