完成需求详情

--- a/templates/index.html
+++ b/templates/index.html
@@ -499,7 +499,7 @@
                                     </figure>
                                     <div class="c-trade-card__synopsis">
                                         <h4 class="c-trade-card__title">
-                                            <a class="c-trade-card__link" target="_blank" href="{{ dm.demand.id }}"
+                                            <a class="c-trade-card__link" target="_blank" href="/commend/demandinfo/{{ dm.demand.id }}"
                                                {% if dm.user_vip == 1 or dm.user_vip == 2 %}style="color:red" {% endif %}>{{ dm.demand.title }}</a>
                                         </h4>
                                         <div class="c-trade-card__desc"><span
