--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 </div>
 <header class="c-page-header">
     <nav class="c-page-header__nav">
-        <a class="c-page-header__logo" href="/user/index/">
+        <a class="c-page-header__logo" href="/commend/index/">
             <img class="c-page-header__logo-img" src="/static/images/kuairenmai.png" alt="企业Logo">
         </a>
         <form class="c-page-header__search-form" action="/commend/search/" method="get">
@@ -68,7 +68,7 @@
 {% endblock %}
 <footer class="c-page-footer">
     <nav class="c-page-footer__row c-page-footer__about">
-        <a class="c-page-footer__text c-page-footer__link" href="/user/index/">首页&nbsp;&#47;</a>
+        <a class="c-page-footer__text c-page-footer__link" href="/commend/index/">首页&nbsp;&#47;</a>
         <a class="c-page-footer__text c-page-footer__link" href="#">&nbsp;免责声明&nbsp;&#47;</a>
         <a class="c-page-footer__text c-page-footer__link" href="#">&nbsp;关于我们</a>
     </nav>
