--- a/templates/login.html
+++ b/templates/login.html
@@ -67,7 +67,7 @@
                                         $("#p1").show();
                                         $("#ts").text(rs.data);
                                     }else{
-                                        location.href="/user/index/"
+                                        location.href="/commend/index/"
                                     }
                               },
                               error:function(rs){
