--- a/templates/user/accountbase.html
+++ b/templates/user/accountbase.html
@@ -63,7 +63,7 @@
     <nav class="c-page-header__nav">
         <ul class="list-inline c-user-banner__nav-list">
             <li class="list-inline-item c-user-banner__nav-item">
-                <a class="c-user-banner__nav-link c-user-banner__logo" href="/user/index/"><img
+                <a class="c-user-banner__nav-link c-user-banner__logo" href="/commend/index/"><img
                         class="c-user-banner__logo-img" src="/static/images/kuairenmai.png" alt="Logo"></a>
             </li>
             <li class="list-inline-item c-user-banner__nav-item">
@@ -100,7 +100,7 @@
         {% endblock %}
         <footer class="c-page-footer">
             <nav class="c-page-footer__row c-page-footer__about">
-                <a class="c-page-footer__text c-page-footer__link" href="/user/index/">首页&nbsp;&#47;</a>
+                <a class="c-page-footer__text c-page-footer__link" href="/commend/index/">首页&nbsp;&#47;</a>
                 <a class="c-page-footer__text c-page-footer__link" href="#">&nbsp;免责声明&nbsp;&#47;</a>
                 <a class="c-page-footer__text c-page-footer__link" href="#">&nbsp;关于我们</a>
             </nav>
